--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>IU Webmaster redirect</title>
-    <META http-equiv="refresh" content="0;URL=gorgolewswki_cv.pdf">
+    <META http-equiv="refresh" content="0;URL=gorgolewski_cv.pdf">
   </head>
   <body bgcolor="#ffffff">
   </body>
